# AntiSnipe-MultiChat

./: .eslintrc.cjs  .gitignore  CONTRIBUTING.md  README.md  electron.vite.config.1775298321659.mjs  electron.vite.config.ts  logo-concepts.html  logo-confluence.html  logo-export.html  package-lock.json  package.json  tailwind.config.js  test.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
docs/: PLUGINS_README.md
docs/plugins/: PLUGIN_GUIDE_FOR_AI.md  bot-filter.js  custom-commands.js  keyword-highlight.js  platform-badge.js  song.js  spam-filter.js  sub-highlight.js  vip-tagger.js
docs/superpowers/plans/: 2026-05-29-tauri-chatterino-migration.md
docs/superpowers/specs/: 2026-05-29-tauri-chatterino-migration-design.md  2026-06-11-twitch-user-card-design.md
scripts/: clean-dist.mjs  fix-latest-yml.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  commands.rs  events.rs  lib.rs  main.rs  models.rs  settings.rs
src/main/: index.ts  preload.ts
src/main/auth/: LocalAuthServer.ts  TokenStore.ts  TwitchAuth.ts  YouTubeAuth.ts
src/main/emotes/: EmoteCacheManager.ts  EmoteResolver.ts
src/main/ipc/: broadcaster.ts  handlers.ts
src/main/services/: PlatformManager.ts  PluginManager.ts  media.ts  pluginSandbox.test.ts  pluginSandbox.ts
src/main/store/: SettingsStore.ts
src/main/updater/: AutoUpdater.ts
src/main/windows/: userCardWindow.ts
src/renderer/: App.tsx  UserCardApp.tsx  globals.d.ts  index.html  main.tsx
src/renderer/hooks/: useChat.ts  useIpc.ts  useSettings.ts
src/shared/: constants.ts
(+76 files in other folders)
