[package]
name = "confluence"
version = "1.0.4"
description = "Cross-platform desktop chat aggregator for YouTube, Twitch, and Kick"
authors = ["AntiSnipe"]
edition = "2021"

[lib]
name = "confluence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
